<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <include
        layout="@layout/appbar"
        android:id="@+id/tb" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb"
        android:padding="16dp"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginBottom="8dp"
              />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:layout_marginVertical="8dp" />


            <!-- Q1 -->
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textStyle="bold"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:textSize="16dp"
                android:textColor="#555555"
                android:layout_marginTop="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:layout_marginVertical="8dp" />

            <!-- Q2 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textStyle="bold"
                android:textColor="#333333"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textColor="#555555"
                android:layout_marginTop="4dp"
                android:textSize="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:layout_marginVertical="8dp" />

            <!-- Q3 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textStyle="bold"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a3"
                android:textColor="#555555"
                android:layout_marginTop="4dp"
                android:textSize="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:layout_marginVertical="8dp" />

            <!-- Q4 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textStyle="bold"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a4"
                android:textColor="#555555"
                android:layout_marginTop="4dp"
                android:textSize="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:layout_marginVertical="8dp" />

            <!-- Q5 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textStyle="bold"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a5"
                android:textColor="#555555"
                android:layout_marginTop="4dp"
                android:textSize="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:layout_marginVertical="8dp" />

            <!-- Q6 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textStyle="bold"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a6"
                android:textColor="#555555"
                android:layout_marginTop="4dp"
                android:textSize="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:layout_marginVertical="8dp" />

            <!-- Q7 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7"
                android:textStyle="bold"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a7"
                android:textColor="#555555"
                android:layout_marginTop="4dp"
                android:textSize="16dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
